# kinova_gen3_pad

./: README.md
kinova_gen3_pad_msgs/: CMakeLists.txt  package.xml
kinova_gen3_pad_msgs/msg/: KinovaArmStatus.msg
kinova_gen3_pad_plugin/: CMakeLists.txt  kinova_gen3_pad_pluginlib.xml  package.xml
kinova_gen3_pad_plugin/config/: robotnik_pad_plugins_ps4_kinova_arm_gen3.yaml
kinova_gen3_pad_plugin/include/kinova_gen3_pad_plugin/: kinova_arm_gen3_plugin.h
kinova_gen3_pad_plugin/src/: kinova_arm_gen3_plugin.cpp  kinova_arm_gen3_plugins.cpp
